# TrafficSenseAI

./: Collector.sh  auto_pipeline_traine.sh  auto_tune.sh  bashScriptCOnfig.sh  detector_v2_log_20251222_230004.json  diag.sh  hsv_calibration.json  init.txt  launcher.sh  launcher.sh.backup_20251205_151819  rapport.latex.txt  readme.md  traffic_light_detection_log.json  traffic_light_detections.json  visionTuner.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
scripts/: auto_dataset_collector.py  auto_robot_driver.py  verify.py
src/: projectSetup.sh
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: autonomous.launch.py  autonomous.launch.py.backup.txt  gazebo.launch.py
src/robot_description/urdf/: robot.xacro
src/robot_description/worlds/: traffic_world.world
tuning_results/: iteration_001.json  iteration_002.json  iteration_003.json  iteration_004.json  iteration_005.json  iteration_006.json  iteration_007.json  iteration_008.json  iteration_009.json  iteration_010.json  iteration_011.json  iteration_012.json  iteration_013.json  iteration_014.json  iteration_015.json  iteration_016.json  iteration_017.json  iteration_018.json  iteration_019.json  iteration_020.json  iteration_021.json  iteration_022.json  iteration_023.json  iteration_024.json  iteration_025.json  iteration_026.json  iteration_027.json  iteration_028.json  iteration_029.json  iteration_030.json  iteration_031.json  iteration_032.json  iteration_033.json  iteration_034.json  iteration_035.json  iteration_036.json  (+144 more)
(+451 files in other folders)
